# jtr-generator

./: .codecov.yml  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  install.sh  pyproject.toml  sonar-project.properties  test_career_sheet_generation.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
data/a4/definitions/: manual_bounds.json
data/layouts/: README.md  resume_layout_a4.json  resume_layout_a4_v2.json  resume_layout_a4_v2_data_field_alignment.json  resume_layout_a4_v2_text_anchors.json
docs/: career_sheet_design.md  layout_alignment.md  roadmap.md  specifications.md  testing.md
docs/development/: ci-configuration.md  font_selection_rationale.md  layout_adjustment_history.md
examples/: sample_resume.json  sample_resume.yaml
fonts/: README.md
jtr-generator/assets/data/a4/: README.md
jtr-generator/assets/data/a4/definitions/: career_sheet_manual_bounds.json  line_extraction_config.json
jtr-generator/assets/data/a4/rules/: career_sheet_spacing.json
jtr-generator/assets/data/career_sheet/: docx_style_report.json
jtr-generator/assets/examples/: sample_career_content.md
jtr-generator/assets/fonts/: README.md
jtr-generator/assets/schemas/: rirekisho_schema.json
jtr-generator/references/: README.md  career_sheet_best_practices.md
jtr-generator/references/job_type/: 02_sales_service.md  03_professional_services_medical_welfare_education.md  04_specialist_consulting_finance_real_estate.md  05_creative.md  07_technical_electrical_mechanical.md  08_technical_arch_civil.md  12_organization_staff_others.md  README.md
jtr-generator/scripts/: main.py
jtr-generator/scripts/jtr/: markdown_to_richtext.py  rirekisho_data.py  rirekisho_generator.py
jtr-generator/scripts/jtr/helper/: config.py  japanese_era.py  paths.py
jtr-generator/scripts/jtr/layout/: __init__.py  metrics.py
outputs/: font_selection_report.txt
schemas/: layout_schema.json  resume_schema.json
skill/: README.md  SKILL.md  __init__.py  main.py  requirements.txt
skill/assets/: config.yaml
skill/assets/data/: data_field_positions_raw.json
skill/assets/data/a4/: README.md  rirekisho_layout.json
skill/assets/data/a4/rules/: career_sheet_label_alignment.json
skill/assets/data/career_sheet/: docx_style_report.json
skill/assets/examples/: sample_additional_info.yaml  sample_career_content.md  sample_career_metadata.yaml  sample_rirekisho.json  sample_rirekisho.yaml
skill/assets/schemas/: additional_info_schema.json  career_sheet_schema.json  layout_schema.json  resume_schema.json  rirekisho_schema.json
skill/data/a4/: README.md
skill/data/a4/rules/: label_alignment.json
skill/examples/: sample_resume.json  sample_resume.yaml
skill/jtr/: __init__.py  config.py  pdf_generator.py  resume_data.py
skill/references/: README.md  career_sheet_best_practices.md
skill/references/job_type/: 01_planning_marketing_management.md  06_engineer_it.md  09_technical_pharma_chemical_material_food.md  10_administrative_office.md  11_public_servant_sdf.md
skill/schemas/: layout_schema.json
skill/scripts/: __init__.py  main.py
skill/scripts/jtr/: __init__.py  career_sheet_generator.py  config.py  fonts.py  japanese_era.py  markdown_to_richtext.py  paths.py  pdf_generator.py  resume_data.py  resume_generator.py  rirekisho_data.py  rirekisho_generator.py
skill/scripts/jtr/helper/: __init__.py  fonts.py  generation_context.py  paths.py
skill/scripts/jtr/layout/: career_sheet.py  metrics.py
src/generators/: __init__.py  pdf.py
src/layout/: __init__.py  anchors.py
src/validators/: data.py
tests/: conftest.py
tests/fixtures/: a4_text_anchors.json  resume_sample.docx
tests/fixtures/invalid/: empty_education.yaml  invalid_birthdate.yaml  invalid_gender.yaml  invalid_name_kana.yaml  malformed.yaml  missing_name.yaml
tests/fixtures/valid/: full.json  full.yaml  minimal.yaml
tests/formatters/: test_wareki.py
tests/generators/: __init__.py  test_career_sheet.py  test_pdf.py  test_pdf_visual.py  test_pdf_with_data.py
tests/jtr/: test_config.py  test_markdown_to_richtext.py  test_resume_data_extended.py  test_scripts_main_entrypoint.py  test_skill_main_wrapper.py
tests/jtr/layout/: test_anchors.py
tests/layout/: test_layout_absolute_positions.py  test_layout_anchor_resolution.py
tests/scripts/: test_main_entrypoint.py
tests/scripts/jtr/: test_config.py  test_layout_metrics_and_anchors.py  test_markdown_to_richtext.py  test_resume_data_extended.py  test_rirekisho_data_extended.py
tests/scripts/jtr/layout/: test_anchors.py  test_career_sheet_spacing.py  test_metrics.py
tests/tools/: test_analyze_data_field_alignment.py  test_analyze_docx_styles.py  test_analyze_text_alignment.py  test_build_skill_package.py  test_check_coverage_per_file.py  test_extract_lines.py  test_extract_lines_helpers.py  test_font_metrics_report.py  test_generate_and_verify_pdf_scripts.py  test_generate_text_anchors.py  test_manual_career_sheet_generation.py  test_package_artifact.py
tests/validators/: test_data_loader.py
tools/: README.md  analyze_docx_styles.py  build_skill.py  build_skill_package.py  check_coverage_per_file.py  compare_cells.py  extract_lines.py  extract_page2_text_positions.py  font_metrics_report.py  generate_blank_resume.py  generate_blank_rirekisho.py  manual_career_sheet_generation.py  measure_cell_coords.py  validate_education_metrics.py  validate_font_metrics.py  validate_kana_metrics.py  verify_pdf.py
tools/layout/: analyze_data_field_alignment.py  analyze_text_alignment.py  core_geometry.py  generate_text_anchors.py
