[project]
name = "jtr-generator"
version = "0.1.0"
description = "日本の履歴書（JIS規格準拠）をPDF形式で生成するツール"
authors = [
    { name = "jtr-generator contributors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "data"]

# Ruff設定
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# mypy設定
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

# pytest設定
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
# pytest-spec設定（docstringを優先表示）
spec_test_format = "{result} {docstring_summary}"

# pytest-cov設定
[tool.coverage.run]
source = ["src", "tools"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# poethepoet タスクランナー設定
[tool.poe.tasks]
test = "pytest tests/ --spec"
test-cov = "pytest tests/ --cov=src --cov=tools --cov-report=term-missing --cov-report=xml --spec"
test-watch = "pytest tests/ -f --spec"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/"
check-all = ["lint", "format-check", "typecheck", "test-cov"]
clean-outputs = "rm -rf outputs/*.pdf outputs/*.jpg outputs/debug/"

# Agent Skillsパッケージビルド
[tool.poe.tasks.build-skill]
help = "Build Agent Skills package (jtr-generator.zip)"
sequence = [
    # 1. 一時ディレクトリのクリーンアップと作成
    { cmd = "rm -rf build/jtr-generator build/jtr-generator.zip" },
    { cmd = "mkdir -p build/jtr-generator" },

    # 2. ルート配置ファイルのコピー（main.py以外）
    { cmd = "cp SKILL.md build/jtr-generator/" },
    { cmd = "cp config.yaml build/jtr-generator/" },
    { cmd = "cp README.md build/jtr-generator/" },

    # 3. src/のコピー（ディレクトリ構造を維持）
    { cmd = "mkdir -p build/jtr-generator/src/generators" },
    { cmd = "mkdir -p build/jtr-generator/src/validators" },
    { cmd = "mkdir -p build/jtr-generator/src/formatters" },
    { cmd = "mkdir -p build/jtr-generator/src/layout" },
    { cmd = "cp src/__init__.py build/jtr-generator/src/" },
    { cmd = "cp src/generators/__init__.py build/jtr-generator/src/generators/" },
    { cmd = "cp src/generators/pdf.py build/jtr-generator/src/generators/" },
    { cmd = "cp src/validators/__init__.py build/jtr-generator/src/validators/" },
    { cmd = "cp src/validators/data.py build/jtr-generator/src/validators/" },
    { cmd = "cp src/formatters/__init__.py build/jtr-generator/src/formatters/" },
    { cmd = "cp src/formatters/wareki.py build/jtr-generator/src/formatters/" },
    { cmd = "cp src/layout/__init__.py build/jtr-generator/src/layout/" },
    { cmd = "cp src/layout/anchors.py build/jtr-generator/src/layout/" },
    { cmd = "cp src/layout/metrics.py build/jtr-generator/src/layout/" },

    # 4. data/のコピー
    { cmd = "mkdir -p build/jtr-generator/data/layouts" },
    { cmd = "cp data/layouts/resume_layout_a4_v2.json build/jtr-generator/data/layouts/" },

    # 5. schemas/のコピー
    { cmd = "mkdir -p build/jtr-generator/schemas" },
    { cmd = "cp schemas/resume_schema.json build/jtr-generator/schemas/" },

    # 6. fonts/のコピー
    { cmd = "mkdir -p build/jtr-generator/fonts/BIZ_UDMincho" },
    { cmd = "cp fonts/BIZ_UDMincho/BIZUDMincho-Regular.ttf build/jtr-generator/fonts/BIZ_UDMincho/" },
    { cmd = "cp fonts/BIZ_UDMincho/OFL.txt build/jtr-generator/fonts/BIZ_UDMincho/" },

    # 7. examples/のコピー
    { cmd = "mkdir -p build/jtr-generator/examples" },
    { cmd = "cp examples/sample_resume.yaml build/jtr-generator/examples/" },
    { cmd = "cp examples/sample_resume.json build/jtr-generator/examples/" },

    # 8. Pythonファイルのパス修正とzip作成
    { cmd = "python tools/build_skill.py" },
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.39.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-spec>=4.0.0",
    "ruff>=0.14.10",
    "types-jsonschema>=4.25.1.20251009",
    "types-pyyaml>=6.0.12.20250915",
    "pypdf>=6.5.0",
    "pymupdf>=1.24.0",
    # 画像処理・視覚的検証用
    "pdf2image>=1.17.0",
    "scikit-image>=0.24.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
]
